--- a/scoreboard/templates/errors/404.html.j2
+++ b/scoreboard/templates/errors/404.html.j2
@@ -1,7 +1,7 @@
-{% extends "layout.html.j2" %}
+{% extends "common/layout.html.j2" %}
 
 {% block nav %}
-	{% include "nav_bar.html.j2" with context %}
+	{% include "common/nav_bar.html.j2" with context %}
 {% endblock nav %}
 
 {% block main %}
