--- a/scoreboard/templates/errors/error.html.j2
+++ b/scoreboard/templates/errors/error.html.j2
@@ -1,4 +1,4 @@
-{% extends "layout.html.j2" %}
+{% extends "common/layout.html.j2" %}
 
 {% block main %}
 <div id="page_body" class="container">
@@ -6,9 +6,9 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
           <h1>Error {{error_code}}</h1>
-					{% if message %}
+					{% if error_message %}
 					<p>
-						{{ message }}
+						{{ error_message }}
 					</p>
 					{% else %}
           <p>
